Add custom wal implementation
